--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="GLUtils.cpp" />
     <ClCompile Include="KeyboardControlComponent.cpp" />
     <ClCompile Include="Label.cpp" />
+    <ClCompile Include="LabelUtils.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MusicPlayer.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="GLUtils.h" />
     <ClInclude Include="KeyboardControlComponent.h" />
     <ClInclude Include="Label.h" />
+    <ClInclude Include="LabelUtils.h" />
     <ClInclude Include="LayerEnum.h" />
     <ClInclude Include="MusicPlayer.h" />
     <ClInclude Include="Patterns.h" />
