--- a/Projects/OpenGLCourse/OpenGLCourse.vcxproj.filters
+++ b/Projects/OpenGLCourse/OpenGLCourse.vcxproj.filters
@@ -53,22 +53,7 @@
     <None Include="Shaders\fragmentOutline.shader">
       <Filter>Resource Files\Shaders</Filter>
     </None>
-    <None Include="Shaders\fragmentSingleColor.shader">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
     <None Include="Shaders\fragmentGrass.shader">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-    <None Include="Shaders\fragment2D.shader">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-    <None Include="Shaders\fragment3D.shader">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-    <None Include="Shaders\vertex2D.shader">
-      <Filter>Resource Files\Shaders</Filter>
-    </None>
-    <None Include="Shaders\vertex3D.shader">
       <Filter>Resource Files\Shaders</Filter>
     </None>
     <None Include="Shaders\fragmentFBO.shader">
@@ -81,6 +66,24 @@
       <Filter>Resource Files\Shaders</Filter>
     </None>
     <None Include="Shaders\vertexSkybox.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\fragmentLightCube.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\fragmentCube.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\vertexCube.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\fragmentTexture.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\vertexTexture.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Shaders\vertexLightCube.shader">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
