Draw texture OK

--- a/Projects/Arkanoid/Arkanoid.vcxproj
+++ b/Projects/Arkanoid/Arkanoid.vcxproj
@@ -144,9 +144,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Libraries\glad\src\glad.c" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SpriteRenderer.cpp" />
     <ClCompile Include="Textures2DManager.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
   </ItemGroup>
@@ -154,12 +155,17 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameStateEnum.h" />
-    <ClInclude Include="IModelObject.h" />
+    <ClInclude Include="IUniqueId.h" />
+    <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="Textures2DManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Utils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\Fragment\fragmentSprite.shader" />
+    <None Include="Shaders\Vertex\vertexSprite.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
