Level and Player loading

--- a/Projects/Arkanoid/Arkanoid.vcxproj
+++ b/Projects/Arkanoid/Arkanoid.vcxproj
@@ -145,6 +145,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameLevel.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -155,7 +157,10 @@
   <ItemGroup>
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameLevel.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SpriteRenderer.h" />
@@ -166,6 +171,9 @@
     <None Include="Shaders\Vertex\vertexSprite.shader" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Assets\background.jpg" />
+    <Image Include="Assets\block.png" />
+    <Image Include="Assets\blockSolid.png" />
     <Image Include="Assets\face.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
